# api_case

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 74d96983e76d_initial.py
src/: main.py
src/api/v1/: auth.py  users.py
src/core/: config.py  db.py  dependencies.py  exceptions.py  redis.py  security.py
src/models/: base.py  user.py
src/repositories/: users.py
src/schemas/: user.py
src/services/: auth.py  email.py
src/types/: auth.py  repositories.py  services.py
src/workers/: email_worker.py
tests/: conftest.py  test_auth_service.py
